2008-08-13  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.cpp: Revert the settingsWindow from being
	instantiated as a child of MainWindow - caused issues here.

2008-08-08  Naomi Fox  <naomi.fox@gmail.com>
	
	* libavogadro/src/extensions/trajvideomaker.* : static functions for 
	making a .avi of a trajectory.

	* libavogadro/src/extensions/linmorph.* : fixed a bug with the total
	number of frames not matching the number of conformations. also now
	tell user where the video file they created is stored.

2008-08-06  Naomi Fox  <naomi.fox@gmail.com>

	* libavogadro/src/extensions/linmorph* : LinMorph extension 
	from animation branch.

	* testfiles/tyr-33-conf* : Test conformations for LinMorph extension

2008-07-12  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/addenginedialog.*: Use new PluginFactory class.
	
	* avogadro/src/enginecolorswidget.*: Use new ColorPlugin class.

	* avogadro/src/main.cpp: Load the plugins here...

	* avogadro/src/mainwindow.cpp: Remove call to
	PluginManager::loadExtensions().
	
	* libavogadro/src/CMakeLists.txt: Statically link ElementColor in
	libavogadro.

	* libavogadro/src/color.h: Move settingsWidget() to ColorPlugin.

	* libavogadro/src/elementcolor.*: Moved to colors/.

	* libavogadro/src/engine.*: Use new Plugin base class.
	
	* libavogadro/src/engines/CMakeLists.txt: Add overlay engine.

	* libavogadro/src/engines/*engine.h: Use new PluginFactory class.

	* libavogadro/src/extension.*: Use new Plugin base class. 

	* libavogadro/src/extensions/*extension.h: Use new PluginFactory
	class.

	* libavogadro/src/glwidget.*: Use new PluginFactory class.

	* libavogadro/src/plugindialog.*: Use the PluginFactory's
	descriptions. Added Colors to the combo box.

	* libavogadro/src/pluginmanager.*: Load all plugins in the same
	generic function, PluginFactory::type() is used to determine the
	plugin type. 

	* libavogadro/src/residuecolor.*: Moved to colors/.
